--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
+    "vue-router": "^3.3.4",
     "vue-sweetalert2": "^3.0.5"
   },
   "devDependencies": {
